@@ -1,3 +1,7 @@
+2001-12-12 00:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>
+
+	* gnus-sum.el (gnus-summary-show-article): Fix doc.
+
 2001-12-10 17:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>
 
 	* mml.el (mime-to-mml): Remove Content-Disposition too.
